src/k8s/storage/longhorn-ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: longhorn-ui
  namespace: longhorn-system
  annotations:
    cert-manager.io/cluster-issuer: levizitting-ca
    traefik.ingress.kubernetes.io/router.middlewares: longhorn-system-longhorn-https-redirect@kubernetescrd,oauth2-proxy-oauth2-forward-auth@kubernetescrd
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - longhorn.levizitting.com
      secretName: longhorn-tls
  rules:
    - host: longhorn.levizitting.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: longhorn-frontend
                port:
                  number: 80
